--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
       font-size: 20px;
       color: #ccc;
       background-color: #000000;
-      border: 1px solid #c89666;
+      border: 2px solid #ffffff;
       border-radius: 10px;
   }
   .button-add {
@@ -43,7 +43,8 @@
       font-size: 20px;
       border-radius: 10px;
       border: 0;
-      background-color: #d1af71;
+      background-color: #000000;
+      color: #7fb9c5;
       cursor: pointer;
   }
   .list-item {
@@ -61,4 +62,5 @@
     color:#7fb9c5;
     width: 150px;
     word-wrap: break-word;
+    border: 2px solid #ffffff;
  }
