--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 
   .task-input {
       outline: none;
-      width: 260px;
+      width: 230px;
       padding: 15px;
       margin-right: 25px;
       font-size: 20px;
@@ -37,7 +37,7 @@
       border-radius: 10px;
   }
   .button-add {
-      width: 70px;
+      width: 60px;
       padding: 15px 15px;
       font-size: 20px;
       border-radius: 10px;
@@ -45,6 +45,9 @@
       background-color: #000000;
       color: #7fb9c5;
       cursor: pointer;
+  }
+  .button-add:hover {
+      opacity: 0.8;
   }
   .list-item {
       display: flex;
@@ -82,5 +85,6 @@
  }
 .color:hover {
     opacity: 0.7;
+    
 }
  
